# yine-rule-engine-psa

./: README.md  pyproject.toml
configs/: default.yaml  logging.yaml
configs/experiments/: dataset_v1.yaml  negatives_v1.yaml
configs/rules/: rules_v1.yaml  wampi_rules_v1.yaml
data/interim/: full_corpus.cleaned.csv  full_corpus.cleaned.parquet
data/processed/reports/: audit_cleaned.json  audit_raw.json  filter_report.json  normalization_summary.json  provenance.json  removed_rows.csv  structural_cleanup_summary.json
data/raw/: full_corpus.csv
resources/lexicons/: determiners_es.yaml  posesivos_es.yaml  possessive_prefixes_yine.yaml  pssd_suffixes.yaml  r7_adjectives_yine.yaml  r7_agreement_suffixes.yaml  wampis_number_markers.yaml  wampis_person_markers.yaml  wampis_possessive_prefixes.yaml  wampis_tense_suffixes.yaml  yine_determiners.yaml
scripts/: generate_linguistic_extension_report.py  generate_preprocessing_report_v1.py
src/yine_rules/: __init__.py  cli.py  settings.py
src/yine_rules/datasets/: freeze_positive.py  splits.py
src/yine_rules/io/: read_corpus.py  write_outputs.py  writers.py
src/yine_rules/negatives/: base_generator.py  engine.py  load_generators.py  registry.py  reporting.py  types.py
src/yine_rules/preprocessing/: alignment_checks.py  audit.py  conditioning_pipeline.py  filter.py  normalize.py  structural_cleanup.py
src/yine_rules/utils/: hashing.py  logging.py  reproducibility.py
src/yine_rules/validation/: prefix_pssd_candidates.py  pssd_stats.py  scan_r7_adjectives_endings.py  validate_r4_candidates_strict.py  (+3 more)
(+10 files in other folders)
